<resources>
    <string name="app_name">InNOut</string>
    <string name="start_order">Start Order</string>
    <string name="place_order">Place Order Below</string>
    <string name="double_double">Double-Double\nBurger</string>
    <string name="cheeseburger">Cheeseburger</string>
    <string name="french_fries">French Fries</string>
    <string name="shake">Shake</string>
    <string name="fountain_drinks">Fountain Drinks (S/M/L)</string>
    <string name="small_drink">Small</string>
    <string name="medium_drink">Medium</string>
    <string name="large_drink">Large</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="sub_total">Sub-Total: </string>
    <string name="tax">Tax: </string>
    <string name="total">Total: </string>
    <string name="vanilla">Vanilla</string>
    <string name="chocolate">Chocolate</string>
    <string name="strawberry">Strawberry</string>
    <string name="vanilla_added">Vanilla Shake Added!</string>
    <string name="chocolate_added">Chocolate Shake Added!</string>
    <string name="strawberry_added">Strawberry Shake Added!</string>
    <string name="vanilla_removed">Vanilla Shake Removed</string>
    <string name="chocolate_removed">Chocolate Shake Removed</string>
    <string name="strawberry_removed">Strawberry Shake Removed</string>
    <string name="confirm">Confirm</string>
    <string name="make_animal_style">Make Animal Style</string>
    <string name="undo_animal_style">Undo Animal Style</string>
    <string name="place_order_btn">Place Order</string>
    <string name="place_another_order">Place Another Order</string>
    <string name="place_new_order">Place New Order</string>
    <string name="exit">Exit Application</string>
    <string name="no_food_ordered">You haven\'t ordered any food!</string>
</resources>
