<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/order_background"
    tools:context=".OrderConfirmScreen">

    <ListView
        android:id="@+id/_dynamic_orderList"
        android:layout_width="395dp"
        android:layout_height="400dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="313dp"
        android:layout_height="87dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_dynamic_orderList">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/subTotal"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sub_total" />

            <TextView
                android:id="@+id/subTotalAmt"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tax"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/tax" />

            <TextView
                android:id="@+id/taxAmt"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/total"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/total" />

            <TextView
                android:id="@+id/totalAmt"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </TableRow>

    </LinearLayout>

    <Button
        android:id="@+id/placeOrderBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:onClick="placeOrder"
        android:text="@string/place_order_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</android.support.constraint.ConstraintLayout>