<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/order_background"
    tools:context=".OrderActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/place_order"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="446dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="219dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/doubleDoubleTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".9"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/double_double" />

            <TextView
                android:id="@+id/doubleDoublePriceTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:id="@+id/doubleDoubleQuantTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="0" />

            <Button
                android:id="@+id/addDoubleDoubleBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="addDoubleDouble"
                android:padding="5dp"
                android:text="@string/plus" />

            <Button
                android:id="@+id/removeDoubleDoubleButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="removeDoubleDouble"
                android:padding="5dp"
                android:text="@string/minus" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/cheeseburgerTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".9"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/cheeseburger" />

            <TextView
                android:id="@+id/cheeseburgerPriceTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:id="@+id/cheeseburgerQuantTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="0" />

            <Button
                android:id="@+id/addCheeseburgerBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="addCheeseburger"
                android:padding="5dp"
                android:text="@string/plus" />

            <Button
                android:id="@+id/removeCheeseburgerBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="removeCheeseburger"
                android:padding="5dp"
                android:text="@string/minus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/frenchFriesTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".9"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/french_fries" />

            <TextView
                android:id="@+id/frenchFriesPriceTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:id="@+id/frenchFriesQuantTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="0" />

            <Button
                android:id="@+id/addFryBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="addFry"
                android:padding="5dp"
                android:text="@string/plus" />

            <Button
                android:id="@+id/removeFryBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="removeFry"
                android:padding="5dp"
                android:text="@string/minus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/shakeTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".9"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/shake" />

            <TextView
                android:id="@+id/shakePriceTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:id="@+id/shakeQuantTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="0" />

            <Button
                android:id="@+id/addShakeBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="addShake"
                android:padding="5dp"
                android:text="@string/plus" />

            <Button
                android:id="@+id/removeShakeBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="removeShake"
                android:padding="5dp"
                android:text="@string/minus" />
        </TableRow>

        <TableRow
            android:id="@+id/shakeFlavorSelect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioGroup
                android:id="@+id/flavor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checkedButton="@+id/vanilla"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/vanilla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vanilla" />

                <RadioButton
                    android:id="@+id/chocolate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chocolate" />

                <RadioButton
                    android:id="@+id/strawberry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/strawberry" />

            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/fountainDrinksTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/fountain_drinks" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/smallFountainDrinkTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".9"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/small_drink" />

            <TextView
                android:id="@+id/smallDrinkPriceTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:id="@+id/smallDrinkQuantTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="0" />

            <Button
                android:id="@+id/addSmallDrinkBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="addSmallDrink"
                android:padding="5dp"
                android:text="@string/plus" />

            <Button
                android:id="@+id/removeSmallDrinkBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="removeSmallDrink"
                android:padding="5dp"
                android:text="@string/minus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/mediumFountainDrinkTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".9"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/medium_drink" />

            <TextView
                android:id="@+id/mediumDrinkPriceTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:id="@+id/mediumDrinkQuantTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="0" />

            <Button
                android:id="@+id/addMedDrinkBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="addMediumDrink"
                android:padding="5dp"
                android:text="@string/plus" />

            <Button
                android:id="@+id/removeMedDrinkBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="removeMediumDrink"
                android:padding="5dp"
                android:text="@string/minus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/largeFountainDrinkTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".9"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/large_drink" />

            <TextView
                android:id="@+id/largeDrinkPriceTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:id="@+id/largeDrinkQuantTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="0" />

            <Button
                android:id="@+id/addLargeDrinkBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="addLargeDrink"
                android:padding="5dp"
                android:text="@string/plus" />

            <Button
                android:id="@+id/removeLargeDrinkBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="removeLargeDrink"
                android:padding="5dp"
                android:text="@string/minus" />
        </TableRow>

    </LinearLayout>

    <Button
        android:id="@+id/confirmOrderBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="153dp"
        android:onClick="confirmOrder"
        android:text="@string/confirm_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>